compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_size_not_int.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 180
expression: "let x = <<1:size(\"1\")>> x"
---
----- SOURCE CODE
let x = <<1:size("1")>> x

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:18
  │
1 │ let x = <<1:size("1")>> x
  │                  ^^^

Expected type:

    Int

Found type:

    String
